[重构] 清理查询与运行时编排层冗余逻辑